--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>Je suis héberger par github</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Redirection...</title>
+
+<meta http-equiv="refresh" content="0.0001; URL=https://scratch.mit.Edu/users/Linux-Scratcher">
+</head>
+
+<body>
+ <p>Vous serez redirigé vers Linux-Scratcher</p>
+</body>
+
+</html>
