--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Redirection...</title>
 
-<meta http-equiv="refresh" content="0.0001; URL=https://scratch.mit.Edu/users/Linux-Scratcher">
+<meta http-equiv="refresh" content="0.0001; URL=https://linux-scratcher.000webhostapp.com/contact">
 </head>
 
 <body>
