--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
+
 <head>
-<title>Redirection...</title>
-
-<meta http-equiv="refresh" content="0.0001; URL=https://linux-scratcher.000webhostapp.com/contact">
-</head>
-
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+   <title>Linux-Scratcher.fr</title>
+  </head>
 <body>
- <p>Vous serez redirigé vers Linux-Scratcher</p>
+Linux-Scratcher à un problème d'hébergement. Le site sera bientôt opperationnel. Erreur provenant de n1.recloud-hosting.me:1189.
 </body>
-
-</html>
