--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
    <title>Linux-Scratcher.fr</title>
   </head>
 <body>
-Linux-Scratcher à un problème d'hébergement. Le site sera bientôt opperationnel. Erreur provenant de n1.recloud-hosting.me:1189.
+Linux-Scratcher à un problème d'hébergement. Le site sera bientôt opperationnel. Nous estimons qu'il sera accèssible dans environ 1 semaine. Erreur provenant de n1.recloud-hosting.me:1189.
 </body>
