--- a/index.html
+++ b/index.html
@@ -7,5 +7,4 @@
    <title>Linux-Scratcher.fr</title>
   </head>
 <body>
-Linux-Scratcher à un problème d'hébergement. Le site sera bientôt opperationnel.<br><br>Nous estimons qu'il sera accèssible dans environ 1 semaine.<br><br>Erreur provenant de n1.recloud-hosting.me:1189.
-</body>
+<center>En attendant la réactivation du site, on vous donne le Discord de Linux-Scratcher : <br><iframe src="https://discord.com/widget?id=1190765904435359875&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></center></body>
