--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
-   <title>Linux-Scratcher.fr</title>
-  </head>
-<body>
-<center>En attendant la réactivation du site, on vous donne le Discord de Linux-Scratcher : <br><iframe src="https://discord.com/widget?id=1190765904435359875&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></center></body>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="theme-color" content="#36393f"><meta name="referrer" content="no-referrer"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><script src="https://cdn.ravenjs.com/3.25.1/raven.min.js" crossorigin="anonymous" type="b2d544399a1c42bfef6b14d5-text/javascript"></script><link href="/static/css/main.453ff4da.css" rel="stylesheet"></head><body><style>body{margin:0;background-color:#36393f}main{opacity:0;transform:scale(.9);transition:opacity .5s ease,transform .7s ease}</style><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="b2d544399a1c42bfef6b14d5-text/javascript" src="/static/js/main.500087b5.js"></script><script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="b2d544399a1c42bfef6b14d5-|49" defer></script></body></html>
