--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <center><widgetbot
   server="1190765904435359875"
-  channel="1191025190281433158"
+    channe="1191025190281433158"
+  channe2="1190765905043537972"
   width="800"
   height="600"
 ></widgetbot>
