--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
   server="1190765904435359875"
     channe="1191025190281433158"
   channe2="1190765905043537972"
-  width="1000"
-  height="900"
+  width="500"
+  height="1000"
 ></widgetbot>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 
 <style>
   p1 {
     color: #ffffff
+  }
+  body {
+    background-color: #000000;
   }
 </style>
