--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 ></widgetbot>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 
+
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="theme-color" content="#36393f"><meta name="referrer" content="no-referrer"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><script src="https://cdn.ravenjs.com/3.25.1/raven.min.js" crossorigin="anonymous" type="1b9dc8c49b1dfca17ba5a57b-text/javascript"></script><link href="/static/css/main.453ff4da.css" rel="stylesheet"></head><body><style>body{margin:0;background-color:#36393f}main{opacity:0;transform:scale(.9);transition:opacity .5s ease,transform .7s ease}</style><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="1b9dc8c49b1dfca17ba5a57b-text/javascript" src="/static/js/main.6bbd0c8e.js"></script><script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="1b9dc8c49b1dfca17ba5a57b-|49" defer></script></body></html>
+  
+
 <style>
   p1 {
     color: #ffffff
