--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
    <title>Linux-Scratcher.fr</title>
   </head>
 <body>
+<p1>Vous pouvez accéder si dessous au Discord de Linux-Scratcher et à son tchat officiel écrit à partir de rien.</p1>
+  <br><br>
 <center><widgetbot
   server="1190765904435359875"
     channe="1191025190281433158"
@@ -20,13 +22,13 @@
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 
 <br>
-
+<br>
   <iframe
   id="LTchat"
   title="LTchat"
   width="1000"
   height="500"
-  src="https://ltchat.000webhostapp.com/web">
+  src="http://ltchat.000webhostapp.com/web">
 </iframe>
 
 
