--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <title>Linux-Scratcher.fr</title>
   </head>
 <body>
-<p1>Vous pouvez accéder si dessous au Discord de Linux-Scratcher et à son tchat officiel écrit à partir de rien.</p1>
+<center><p1>Vous pouvez accéder si dessous au Discord de Linux-Scratcher et à son tchat officiel écrit à partir de rien.</p1></center>
   <br><br>
 <center><widgetbot
   server="1190765904435359875"
