--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
 <body>
 <center><p1>Vous pouvez accéder si dessous au Discord de Linux-Scratcher et à son tchat officiel écrit à partir de rien.</p1></center>
+  <br>
+  <center><p1>Il est possible que LTchat ne fonctionne pas... Dans ce cas, utilisez-le sur <a href="https://ltchat.000webhostapp.com/web"></p1></center>
   <br><br>
+  
 <center><widgetbot
   server="1190765904435359875"
     channe="1191025190281433158"
@@ -28,7 +31,7 @@
   title="LTchat"
   width="1000"
   height="500"
-  src="http://ltchat.000webhostapp.com/web">
+  src="https://ltchat.000webhostapp.com/web">
 </iframe>
 
 
