--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <center><p1>Vous pouvez accéder si dessous au Discord de Linux-Scratcher et à son tchat officiel écrit à partir de rien.</p1></center>
   <br>
-  <center><p1>Il est possible que LTchat ne fonctionne pas... Dans ce cas, utilisez-le sur <a href="https://ltchat.000webhostapp.com/web"></p1></center>
+  <center><p1>Il est possible que LTchat ne fonctionne pas... Dans ce cas, utilisez-le sur https://ltchat.000webhostapp.com/web</p1></center>
   <br><br>
   
 <center><widgetbot
