--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <title>Linux-Scratcher.fr</title>
   </head>
 <body>
-<center><p1>Vous pouvez accéder si dessous au Discord de Linux-Scratcher et à son tchat officiel écrit à partir de rien.</p1></center>
+<center><p1>Vous pouvez accéder ci-dessous au Discord de Linux-Scratcher.</p1></center>
   <br>
 <br>
   
@@ -23,15 +23,7 @@
 ></widgetbot>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 
-<br>
-<br>
-  <iframe
-  id="LTchat"
-  title="LTchat"
-  width="1000"
-  height="500"
-  src="https://ltchat.000webhostapp.com/web">
-</iframe>
+
 
 
 <style>
