--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
    <title>Linux-Scratcher.fr</title>
+        <link rel="icon" type="image/vnd.icon" href="https://uploads.scratch.mit.edu/get_image/user/91495300_60x60.png">
+
   </head>
 <body>
 <center><p1>Vous pouvez accéder ci-dessous au Discord de Linux-Scratcher.</p1></center>
@@ -18,8 +20,8 @@
   channe2="1190765905043537972"
     channe3="1197670069359083540"
 
-          width="1000"
-  height="500"
+          width="2000"
+  height="1000"
 ></widgetbot>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 
