--- a/index.html
+++ b/index.html
@@ -1,6 +1,37 @@
-<iframe
+<!DOCTYPE html>
+<html lang="fr">
 
-  width="300"
-  height="200"
-  src="https://e.widgetbot.io/channels/1190765904435359875/1239592611740909610">
-</iframe>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+   <title>Linux-Scratcher.fr</title>
+        <link rel="icon" type="image/vnd.icon" href="https://uploads.scratch.mit.edu/get_image/user/91495300_60x60.png">
+
+  </head>
+<body>
+<center><p1>Vous pouvez accéder ci-dessous au Discord de Linux-Scratcher.</p1></center>
+  <br>
+<br>
+  
+<center><widgetbot
+  server="1190765904435359875"
+    channe="1191025190281433158"
+  channe2="1190765905043537972"
+    channe3="1197670069359083540"
+
+          width="1000"
+  height="500"
+></widgetbot>
+<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+
+
+
+
+<style>
+  p1 {
+    color: #ffffff
+  }
+  body {
+    background-color: #000000;
+  }
+</style>
