--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     channe="1191025190281433158"
   channe2="1190765905043537972"
     channe3="1197670069359083540"
-  sizes="(max-width: 600px) 480px,
 
-     <!--     width="1000" height="500" -->
+          width="1000" 
+  height="500"
 
   ></widgetbot>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
