--- a/index.html
+++ b/index.html
@@ -13,17 +13,10 @@
   <br>
 <br>
   
-<center><widgetbot
-  server="1190765904435359875"
-    channe="1191025190281433158"
-  channe2="1190765905043537972"
-    channe3="1197670069359083540"
-
-          width="1000" 
-  height="500"
-
-  ></widgetbot>
-<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+<center><iframe
+ 
+  src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik">
+</iframe>
 
 
 
