--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 ></widgetbot>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 
-
-
+<p1>Vous pouvez également ci-dessous vous abonner à la newsletter de Linux-Scratcher. Vous y reçevrez tout ce qui est envoyé dans le salon #Linux-Scratcher du serveur Discord.</p1>
+   <br><br>
+<iframe data-tally-src="https://tally.so/embed/3qARX2?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="200" frameborder="0" marginheight="0" marginwidth="0" title="Newsletter"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
 <style>
   p1 {
     color: #ffffff
