--- a/index.html
+++ b/index.html
@@ -4,30 +4,23 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
-   <title>Linux-Scratcher.fr</title>
+   <title>Linux-Scratcher's community</title>
         <link rel="icon" type="image/vnd.icon" href="https://uploads.scratch.mit.edu/get_image/user/91495300_60x60.png">
 
   </head>
 <body>
-<center><p1>Vous pouvez accéder ci-dessous au Discord de Linux-Scratcher.</p1></center>
+<center><p1>Discutez avec la communoté de Linux-Scratcher sur LTchat er sur Discord en cliquant sur ces liens.</p1></center>
   <br>
 <br>
-  
-<center><widgetbot
-  server="1190765904435359875"
-    channe="1191025190281433158"
-  channe2="1190765905043537972"
-    channe3="1197670069359083540"
 
-          width="1000"
-  height="500"
-></widgetbot>
-<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
-<br><br>
-<p1>Vous pouvez également ci-dessous vous abonner à la newsletter de Linux-Scratcher. Vous y reçevrez tout ce qui est envoyé dans le salon #Linux-Scratcher du serveur Discord.</p1>
-   <br><br>
-<center><iframe data-tally-src="https://tally.so/embed/3qARX2?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="40%" height="50" frameborder="0" marginheight="0" marginwidth="0" title="Newsletter"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
-</center>
+<h5><a href="https://ltchats.github.io/">
+<img src="costume1.svg" alt="LTchat" title="LTchat" /> 
+</a> <a href="https://e.widgetbot.io/channels/1190765904435359875?api=f7904212-8761-438c-ba18-2fe52b0a641b">
+<img src="https://cdn.prod.website-files.com/6257adef93867e50d84d30e2/636e0a69f118df70ad7828d4_icon_clyde_blurple_RGB.svg" alt="Discord" title="Discord" /> 
+</a></h5> 
+
+  
+
   <style>
   p1 {
     color: #ffffff
