--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h5><a href="https://ltchats.github.io/">
 <img src="costume1.svg" alt="LTchat" title="LTchat" /> 
 </a> &nbsp <a href="https://e.widgetbot.io/channels/1190765904435359875?api=f7904212-8761-438c-ba18-2fe52b0a641b">
-<img src="https://static.vecteezy.com/system/resources/previews/018/930/718/non_2x/discord-logo-discord-icon-transparent-free-png.png" alt="Discord" title="Discord" /> 
+<img src="636e0a69f118df70ad7828d4_icon_clyde_blurple_RGB.svg" alt="Discord" title="Discord" /> 
 </a></h5> 
 
   
