--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h5><a href="https://ltchats.github.io/">
 <img src="costume1.svg" alt="LTchat" title="LTchat" /> 
 </a> &nbsp <a href="https://e.widgetbot.io/channels/1190765904435359875?api=f7904212-8761-438c-ba18-2fe52b0a641b">
-<img src="Building-a.svg" alt="Discord" title="Discord" /> 
+<img src="Building-e.svg" alt="Discord" title="Discord" /> 
 </a></h5> 
 
   
