--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <center><p1>Discutez avec la communoté de Linux-Scratcher sur LTchat er sur Discord en cliquant sur ces liens.</p1></center>
   <br>
 <br>
-
+<center>
 <h5><a href="https://ltchats.github.io/">
 <img src="costume1.svg" alt="LTchat" title="LTchat" /> 
 </a> &nbsp <a href="https://e.widgetbot.io/channels/1190765904435359875?api=f7904212-8761-438c-ba18-2fe52b0a641b">
 <img src="Building-e.svg" alt="Discord" title="Discord" /> 
 </a></h5> 
-
+</center>
   
 
   <style>
